<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common -->
    <string name="app_name">FrontlineSMS</string>
    <string name="action_help">Help</string>
	<string name="action_new">New</string>

    <!-- Service -->
    <string name="local_service_started">Service started.</string>
    <string name="local_service_stopped">Service stopped.</string>
    <string name="local_service_label">FrontlineSMS</string>

    <!-- Home Options Menu -->
    <!--<string name="menu_option_clear">Clear</string>-->
    <!--<string name="menu_option_settings">Settings</string>-->

    <!-- Group List -->
    <string name="menu_option_send_message">Send message</string>


    <!-- Dashboard -->
    <string name="dashboard_groups">Groups</string>
    <string name="dashboard_contacts">Contacts</string>
    <string name="dashboard_rules">Keywords</string>
    <string name="dashboard_messages">Messages</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_search">Search</string>
    <string name="dashboard_log">Jobs</string>

    <!-- Search bar -->
    <string name="searchbar_hint_global">Search messages</string>

    <!-- Settings -->
    <string name="choose_language">Choose a language</string>
    <string name="settings_language">Language</string>
    <string name="settings_email">Email Settings</string>
    <string name="settings_email_server">Account Server:</string>
    <string name="settings_email_username">Account Username:</string>
    <string name="settings_email_password">Account Password:</string>
    <string name="settings_email_port">Account Server Port:</string>
    <string name="settings_email_ssl">Use SSL</string>
    <string name="settings_email_sender">Sender Name &amp; Address:</string>
    <string name="settings_analytics">Google Analytics</string>
    <string name="settings_allow_analytics">Allow statistics collection</string>
    <string name="settings_analytics_info">Google Analytics helps us to improve FrontlineSMS for Android by collection ANONYMOUS data on the usage of the various features that the app offers. No SMS or contact data is collected!</string>
    <string name="settings_keywords">Keywords</string>
    <string name="settings_keywords_anywhere">Allow keyword anywhere in message</string>
    <string name="settings_delay">Delivery delay</string>
    <string name="settings_delay_description">Defines the delay between each outgoing message when sending a mass message to multiple recipients.</string>


    <!-- Keyword List -->
    <string name="menu_option_new">New</string>
    <string name="menu_option_edit">Edit</string>
    <string name="menu_option_delete">Delete</string>
    <string name="menu_option_save">Save</string>
    <string name="menu_option_cancel">Cancel</string>
    <string name="menu_option_info">Info</string>

    <!-- Keyword -->
    <string name="keyword_remove_from_group">Remove from group</string>
    <string name="keyword_add_to_group">Add to group</string>
    <string name="choose_group">Select a group</string>
    <string name="keyword_keyword">Keyword:</string>
    <string name="keyword_autoreply">Auto Reply</string>
    <string name="keyword_description">Description:</string>
    <string name="keyword_forward">Auto Forward</string>
    <string name="keyword_poll">Poll</string>
    <string name="keyword_text">Text:</string>
    <string name="keyword_forward_to_group">to Group:</string>
    <string name="keyword_poll_to_group">to Group:</string>
    <string name="keyword_email">Send E-Mail</string>
    <string name="keyword_subject">Subject:</string>
    <string name="keyword_http_url">URL:</string>
    <string name="keyword_http_request">HTTP Request</string>
    <string name="keyword_recipient">Recipient:</string>

    <!-- Poll strings -->
    <string name="poll_response">Responses:</string>


</resources>
